# StockPrediction

./: README.md  RELIANCE.csv  RELIANCE_with_features.csv  pyproject.toml  stockprediction.py
stockprediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
