[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockprediction"
version = "0.1.0"
description = "Stock prediction model using various ML algorithms"
authors = [
    {name = "Bourbon", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pandas-ta",
    "scikit-learn",
    "xgboost",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ["py38"]